--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -31,7 +32,7 @@
     </nav>
 
     <div class="main" id="section1">
-        <h2>Hello I m Martin:D</h2>
+        <h2 style="font-family: 'Architects Daughter', cursive;">Hello I'm Martin:D</h2>
     </div>
     <div class="main" id="section2">
         <h1>About Me</h1>
@@ -111,9 +112,6 @@
                     <div class="col-sm-5"><a href=""><img src="mask%20logo.JPG" style="height: 200px;"><img src="search.png" alt=""></a></div>
                     <p class="card-text">
                         Created Website called Mask Inventory
-                        <br><br>
-                        <a href="https://peachrara.github.io/mask-inventory/">
-                            link</a>
 
                     </p>
                 </div>
