--- a/index.html
+++ b/index.html
@@ -11,13 +11,12 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&display=swap" rel="stylesheet">
+<link href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Montaga&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <script>
         AOS.init();
-
     </script>
     <nav class="navbar fixed-top navbar-expand-md navbar-top navbar-dark bg-dark">
         <div class="container"><a class="navbar-brand" href=#section1>Martin TSANG</a>
@@ -32,7 +31,8 @@
     </nav>
 
     <div class="main" id="section1">
-        <h2 style="font-family: 'Architects Daughter', cursive;">Hello I'm Martin:D</h2>
+        <h2 style="font-family: 'Architects Daughter', cursive;">Hello I'm Martin:D<br></h2>
+
     </div>
     <div class="main" id="section2">
         <h1>About Me</h1>
@@ -98,7 +98,7 @@
                     <p class="card-text">
                         Design Unity Game: FLIPMAN
                         <br><br>
-                        Posted in App Store
+                        Posted in Play Store
                     </p>
                 </div>
             </div>
@@ -121,6 +121,4 @@
     <footer class="mastfoot">
         <p>Created by Martin TSANG</p>
     </footer>
-</body>
-
-</html>
+</body></html>
